--- a/styles/style.css
+++ b/styles/style.css
@@ -190,7 +190,7 @@ fieldset {
 }
 
 
-.product-sections__image-wrapper {
+.main-goods__image-wrapper {
   width: 160px;
   height: 160px;
   background-color: #ffe17f;
@@ -199,7 +199,7 @@ fieldset {
   align-items: center;
 }
 
-.product-sections__title {
+.main-goods__title {
   font-family: var(--font-fam-title);
   font-weight: 800;
   font-size: inherit;
