--- a/styles/style.css
+++ b/styles/style.css
@@ -69,7 +69,16 @@ fieldset {
   margin: -1px;
 }
 
+.page {
+  height: 100%;
+}
+
 .page__body {
+  margin: 0;
+  padding: 0;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
   font-family: var(--font-fam-main);
   font-weight: var(--fw-normal);
   font-size: var(--fs-main);
@@ -77,6 +86,10 @@ fieldset {
   color: var(--color-main);
 
   background-color: var(--background-main);
+}
+
+.main-content {
+  flex-grow: 1;
 }
 
 .page-header {
