--- a/styles/style.css
+++ b/styles/style.css
@@ -95,6 +95,35 @@ fieldset {
   background-color: var(--background-main);
 }
 
+.link, .button  {
+  position: relative;
+  z-index: 1;
+  display: inline-block;
+
+  font-family: var(--font-fam-title);
+  font-weight: var(--fw-super-bold);
+  font-size: var(--fs-main);
+  line-height: 21px;
+  text-align: cetner;
+  text-transform: uppercase;
+  color: var(--color-main);
+  border: none;
+  background-color: transparent;
+  letter-spacing: .2em;
+}
+
+.link::before, .button::before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  width: 100%;
+  height: 8px;
+  background-color: #ffe17f;
+  top: 50%;
+  left: 0;
+  transform: translateY(-50%);
+}
+
 .main-content {
   flex-grow: 1;
 }
@@ -223,7 +252,7 @@ fieldset {
   margin: 0 auto;
 }
 
-.main-content__container-index {
+.products-slider {
    background-image: linear-gradient(180deg, #ffe17f 137px, #fff 1px );
 }
 
@@ -258,7 +287,7 @@ fieldset {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 70px;
+  margin-top: 45px;
 }
 
 .products-slider__description {
@@ -296,7 +325,7 @@ fieldset {
 .products-slider__buttons {
   position: absolute;
   right: 0;
-  bottom: 186px;
+  bottom: 199px;
 }
 
 .product-slider__button {
@@ -304,22 +333,63 @@ fieldset {
 }
 
 .services {
+  background-image: linear-gradient(180deg, white 102px, #f0f0f0 1px);
+  margin-bottom: 70px;
+}
+
+.services__wrapper {
   display: flex;
   align-items: center;
+  padding-bottom: 72px;
+  width: 1160px;
+  margin: 0 auto;
+}
+
+.services__list {
+  align-self: center;
 }
 
 .services__slider {
   display: flex;
   flex-direction: column;
   width: 280px;
+  margin-right: 123px;
+  border-right: 7px solid black;
 }
 
 .services__button {
   width: 153px;
+  padding: 10px 18px;
+  cursor: pointer;
+  margin-bottom: 35px;
+}
+
+.services__button:first-child {
+  margin-top: 65px;
+}
+
+.services__button:last-child {
+  margin-bottom: 65px;
+}
+
+.services__button--active {
+  color: #ffe17f;
+  background-color: #000;
+  width: 100%;
+  text-align: left;
+}
+
+.services__button--active::before {
+  content: none;
+}
+
+.services__text {
+  margin: 0;
+  margin-top: 34px;
 }
 
 .services__item {
-  width: 691px;
+  width: 452px;
   display: none;
 }
 
@@ -330,6 +400,7 @@ fieldset {
 .delivery-info {
   display: flex;
   align-items: center;
+  margin-bottom: 70px;
 }
 
 .delivery-info__text {
@@ -339,14 +410,33 @@ fieldset {
 
 .additional-info {
   display: flex;
+  margin-bottom: 70px;
 }
 
 .site-info {
   width: 520px;
+  margin-right: auto;
 }
 
 .contacts {
   width: 532px;
+}
+
+.site-info__title, .contacts__title {
+  margin: 48px 0;
+}
+
+.site-info__text, .contacts__text {
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.site-info__link {
+  padding: 10px 25px;
+}
+
+.contacts__link {
+  padding: 10px 35px;
 }
 
 .page-footer__container {
@@ -466,35 +556,6 @@ fieldset {
   color: #444444;
 }
 
-.link, .button  {
-  position: relative;
-  z-index: 1;
-  display: inline-block;
-
-  font-family: var(--font-fam-title);
-  font-weight: var(--fw-super-bold);
-  font-size: var(--fs-main);
-  line-height: 21px;
-  text-align: cetner;
-  text-transform: uppercase;
-  color: var(--color-main);
-  border: none;
-  background-color: transparent;
-  letter-spacing: .2em;
-}
-
-.link::before, .button::before {
-  content: '';
-  position: absolute;
-  z-index: -1;
-  width: 100%;
-  height: 8px;
-  background-color: #ffe17f;
-  top: 50%;
-  left: 0;
-  transform: translateY(-50%);
-}
-
 .site-navigation__product-catalog, .site-navigation__list .site-navigation__link {
   font-family: var(--font-fam-title);
   font-weight: var(--fw-super-bold);
@@ -507,6 +568,10 @@ fieldset {
 
 .page-footer__list .site-navigation__link {
   color: #fff;
+}
+
+.main-goods {
+  margin-bottom: 70px;
 }
 
 .main-goods__list {
@@ -548,6 +613,10 @@ fieldset {
   background-color: var(--color-main);
 }
 
+.main-goods__item {
+  width: 164px;
+}
+
 .main-goods__image-wrapper {
   width: 160px;
   height: 160px;
@@ -555,6 +624,11 @@ fieldset {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 32px;
+}
+
+.main-goods__image-wrapper--selfie-monopodes {
+  align-items: flex-end;
 }
 
 .main-goods__title {
@@ -588,6 +662,11 @@ fieldset {
   align-items: center;
 }
 
+.site-info__list {
+  margin: 0;
+  margin-bottom: 30px;
+}
+
 .site-info__item {
   font-family: var(--font-fam-main);
   font-weight: var(--fw-bold);
@@ -596,12 +675,19 @@ fieldset {
   color: var(--color-main);
 }
 
+.site-info__item:not(:last-child) {
+  margin-bottom: 19px;
+}
+
 .contacts__name {
+  display: block;
   font-family: var(--font-fam-main);
   font-weight: var(--fw-bold);
-  font-style: 24px;
+  font-size: 24px;
   line-height: 30px;
   color: #444444;
+  margin: 0;
+  margin-bottom: 15px;
 }
 
 .tel {
