--- a/styles/style.css
+++ b/styles/style.css
@@ -439,33 +439,108 @@ fieldset {
   padding: 10px 35px;
 }
 
+.newsletter-subscribe__header {
+  padding-top: 64px;
+  margin-bottom: 144px;
+  display: flex;
+  align-items: flex-start;
+}
+
+.newsletter-subscribe__title {
+  margin-right: auto;
+}
+
+.newsletter-subscribe__text {
+  width: 560px;
+  margin: 0;
+  align-self: flex-end;
+}
+
+.newsletter-subscribe__body {
+  display: flex;
+  padding-bottom: 56px;
+}
+
+.newsletter-subscribe__form {
+  width: 810px;
+  display: flex;
+}
+
+.newsletter-subscribe__input {
+  background: transparent;
+  border: none;
+  border-bottom: 3px solid #c4c4c4;
+  padding: 11px 0 11px 16px;
+  flex-grow: 1;
+}
+
+.newsletter-subscribe__input::placeholder {
+  color: #444444;
+  font-family: var(--font-fam-main);
+  font-weight: var(--fw-normal);
+  font-size: 18px;
+  line-height: 30px;
+  opacity: 0.5;
+}
+
+.newsletter-subscribe__input:focus {
+  outline: none;
+}
+
+.newsletter-subscribe__btn {
+  background: transparent;
+  border: 3px solid #cecece;
+  font-size: 18px;
+  line-height: 21px;
+  padding: 18px 39px;
+  font-family: var(--font-fam-title);
+  font-weight: var(--fw-super-bold);
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  cursor: pointer;
+}
+
+.newsletter-subscribe__span {
+  margin-left: auto;
+  align-self: center;
+}
+
 .page-footer__container {
   width: 1160px;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
+  padding: 62px 0;
 }
 
 .page-footer__logo {
   display: block;
   width: 145px;
   margin-right: auto;
+  margin-bottom: 35px;
 }
 
 .page-footer__body {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
+  margin-bottom: 47px;
 }
 
 .page-footer__adress {
   width: 240px;
+  margin: 0;
   margin-right: 112px;
 }
 
 .page-footer__list {
   display: flex;
+  flex-wrap: wrap;
   width: 592px;
   flex-direction: wrap;
+}
+
+.page-footer__list .site-navigation__item:not(:last-child) {
+  margin-right: 35px;
 }
 
 .page-footer__tel {
@@ -475,15 +550,29 @@ fieldset {
 .page-footer__footer {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 }
 
 .social-links {
-  width: 200px;
-  margin: 0 auto;
+  width: 150px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.social-links__item {
+  margin-bottom: 15px;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+}
+
+.social-links__item:not(:nth-child(3n)) {
+  margin-right: 15px;
 }
 
 .page-footer__img {
   width: 115px;
+  margin-left: 390px;
 }
 
 .products-catalog {
