--- a/styles/style.css
+++ b/styles/style.css
@@ -132,6 +132,7 @@ fieldset {
   width: 1160px;
   margin: 0 auto;
   padding: 0 61px;
+  padding-bottom: 38px;
   display: flex;
   flex-direction: column;
   background-image: linear-gradient(180deg, #fff 22px, #ffe17f 1px);
