--- a/styles/style.css
+++ b/styles/style.css
@@ -133,9 +133,10 @@ fieldset {
   margin: 0 auto;
   padding: 0 61px;
   padding-bottom: 38px;
+  padding-top: 13px;
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(180deg, #fff 22px, #ffe17f 1px);
+  background-image: linear-gradient(180deg, #fff 35px, #ffe17f 1px);
 }
 
 .page-header__logo {
