--- a/styles/style.css
+++ b/styles/style.css
@@ -146,6 +146,15 @@ fieldset {
   margin-bottom: 30px;
 }
 
+.page-header__logo:focus {
+  outline: none;
+  border: none;
+}
+
+.page-header__logo:focus-visible {
+  box-shadow: 0 0 0 2px #AF4FFF;
+}
+
 .user-menu {
   display: flex;
   align-items: center;
@@ -189,14 +198,26 @@ fieldset {
 .search-form__input {
   flex-grow: 1;
   background-color: transparent;
+  background-image: url('../img/icons/search.svg');
+  background-repeat: no-repeat;
+  background-position: 16px center;
   border: 2px solid var(--color-main);
   border-radius: 50px 0px 0px 50px;
   padding: 10px 0 10px 48px;
   margin: 0;
+  color: var(--color-main);
+  font-family: var(--font-fam-main);
+  font-weight: var(--fw-normal);
+  font-size: 16px;
+  line-height: 20px;
 }
 
 .search-form__input:focus {
   outline: none;
+}
+
+.search-form__input:focus-visible {
+  box-shadow: 0 0 0 2px #AF4FFF;
 }
 
 .search-form__input::placeholder {
@@ -205,6 +226,11 @@ fieldset {
   font-weight: var(--fw-normal);
   font-size: 16px;
   line-height: 20px;
+  opacity: .3;
+}
+
+.search-form__input:disabled {
+  opacity: .3;
 }
 
 .search-form__button {
@@ -219,6 +245,28 @@ fieldset {
   font-weight: var(--fw-normal);
   font-size: 16px;
   line-height: 20px;
+}
+
+.search-form__button:hover {
+  background-color: #000;
+  color: #fff;
+}
+
+.search-form__button:focus {
+  outline: none;
+}
+
+.search-form__button:focus-visible {
+  box-shadow: 0 0 0 2px #AF4FFF;
+}
+
+.search-form__button:active {
+  background-color: #000;
+  color: rgba(255, 255, 255, .3);
+}
+
+.search-form__button:disabled {
+  opacity: .3;
 }
 
 .user-menu__list {
