--- a/styles/style.css
+++ b/styles/style.css
@@ -124,6 +124,14 @@ fieldset {
   transform: translateY(-50%);
 }
 
+.link:hover::before, .button:hover::before {
+  height: 100%;
+}
+
+.link:active::before, .button:active::before {
+  background-color: #ffcc33;
+}
+
 .main-content {
   flex-grow: 1;
 }
@@ -353,6 +361,7 @@ fieldset {
 .site-navigation__product-catalog {
   width: 293px;
   margin-right: auto;
+  padding: 2px 0;
 }
 
 .page-header__list {
@@ -366,6 +375,10 @@ fieldset {
   margin-left: 45px;
 }
 
+.page-header__list .site-navigation__link {
+  padding: 2px 0;
+}
+
 .page-header__list .site-navigation__link:hover {
   opacity: .6;
 }
@@ -376,7 +389,7 @@ fieldset {
 }
 
 .page-header__list .site-navigation__link:focus-visible {
-  box-shadow: 0 0 0 2px #AF4FFF;  
+  box-shadow: 0 0 0 2px #AF4FFF;
 }
 
 .page-header__list .site-navigation__link:active {
@@ -394,6 +407,7 @@ fieldset {
 
 .products-slider__list {
   padding: 0;
+  margin: 0;
 }
 
 .products-slider__item {
@@ -413,8 +427,48 @@ fieldset {
 }
 
 .products-slider__gallery {
+  position: relative;
   width: 560px;
   margin-top: -12px;
+}
+
+.products-slider__post-btn, .products-slider__pre-btn{
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.products-slider__pre-btn {
+  left: 30px;
+  bottom: 289px;
+}
+
+.products-slider__post-btn {
+  right: 0;
+  bottom: 289px;
+  transform: rotate(180deg);
+}
+
+.products-slider__post-btn:hover,
+.products-slider__pre-btn:hover {
+  opacity: .6;
+}
+
+.products-slider__post-btn:focus,
+.products-slider__pre-btn:focus {
+  outline: none;
+  border: none;
+}
+
+.products-slider__post-btn:focus-visible,
+.products-slider__pre-btn:focus-visible {
+  box-shadow: 0 0 0 2px #AF4FFF;
+}
+
+.products-slider__post-btn:active,
+.products-slider__pre-btn:active {
+  opacity: .3;
 }
 
 .products-slider__card {
@@ -423,7 +477,7 @@ fieldset {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-top: 45px;
+  margin-top: 75px;
 }
 
 .products-slider__description {
@@ -439,8 +493,17 @@ fieldset {
 
 .products-slider__link {
   align-self: flex-start;
-  padding: 16px 40px 14px 40px;
+  padding: 14px 40px 14px 40px;
   margin-bottom: 49px;
+}
+
+.products-slider__link:focus {
+  outline: none;
+  border: none;
+}
+
+.products-slider__link:focus-visible {
+  box-shadow: 0 0 0 2px #AF4FFF;
 }
 
 .products-slider__info {
@@ -461,7 +524,7 @@ fieldset {
 .products-slider__buttons {
   position: absolute;
   right: 0;
-  bottom: 199px;
+  bottom: 169px;
 }
 
 .product-slider__button {
@@ -901,6 +964,16 @@ fieldset {
 
 .product-slider__button--active {
   background-color: var(--color-main);
+}
+
+.product-slider__button:hover,
+.product-slider__button--active:hover {
+  opacity: .6;
+}
+
+.product-slider__button:active,
+.product-slider__button--active:active {
+  opacity: .3;
 }
 
 .main-goods__item {
